trim param on map and code
